* New config option: s.icon_text_size = 12
* rake dmg NO_BUILD=1 will skip the build step

== 0.9.5 2009-02-03

* Fixed whitespace in project names bug

== 0.9.4 2009-01-31

* ReleaseNotes.txt renamed to release_notes.txt in applications

== 0.9.3 2009-01-29

* install_choctop generates a release_notes.txt file
* 'rake feed' converts release_notes.txt into release_notes.html file for upload
* #name is the project's folder name if info_plist['CFBundleExecutable'] == "${EXECUTABLE_NAME}"
* builder of xml feed flushes immediately now so no more 0 length xml feeds

== 0.9.2 2009-01-29

* fixed instances of "SUFeedURLKey" to "SUFeedURL" due to f@#$-up error message in Sparkle code that led me astray

== 0.9.1 2009-01-29

* default DMG theme is a sky background and plain volume icon
* sparkle xml feed includes a DSA signature
* explicit release_notes property

== 0.9.0 2009-01-28

* 1 major enhancement:
  * Initial release