@@ -10,8 +10,8 @@ Feature: Can build a customised DMG image from application build
     When dmg 'appcast/build/SampleApp-0.1.0.dmg' is mounted as 'SampleApp'
     Then folder 'SampleApp.app' in mounted volume is created
     And file 'Applications' in mounted volume is created
-    And file 'background.jpg' in mounted volume is created
-    And file 'background.jpg' in mounted volume is invisible
+    And file '.background/background.jpg' in mounted volume is created
+    And file '.background/background.jpg' in mounted volume is invisible
     And file '.VolumeIcon.icns' in mounted volume is created
 
   Scenario: Build a DMG with a whitespace name
@@ -21,8 +21,8 @@ Feature: Can build a customised DMG image from application build
     When dmg 'appcast/build/App With Whitespace-1.0.dmg' is mounted as 'App With Whitespace'
     Then folder 'App With Whitespace.app' in mounted volume is created
     And file 'Applications' in mounted volume is created
-    And file 'background.jpg' in mounted volume is created
-    And file 'background.jpg' in mounted volume is invisible
+    And file '.background/background.jpg' in mounted volume is created
+    And file '.background/background.jpg' in mounted volume is invisible
     And file '.VolumeIcon.icns' in mounted volume is created
 
   Scenario: Build a DMG with custom Applications symlink icon
